src/objects/auCommunityCustomSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AES256Key__c</fullName>
        <label>AES256Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityDomainUrl__c</fullName>
        <label>コミュニティサイトドメインURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommunityName__c</fullName>
        <label>コミュニティ名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityUserIDSuffix__c</fullName>
        <label>CommunityUserIDSuffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultMailSenderName__c</fullName>
        <label>デフォルトメール送信者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownloadAttachUrl__c</fullName>
        <label>DownloadAttachUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DownloadFileUrl__c</fullName>
        <description>URL for downloading files attached to events</description>
        <label>DownloadFileUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MainDomainBaseUrl__c</fullName>
        <label>MainDomainBaseUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MainDomainUrl__c</fullName>
        <label>メインドメインURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PushNotificationConnectedApp__c</fullName>
        <label>PushNotificationConnectedApp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RankingDateStart__c</fullName>
        <label>RankingDateStart</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResetNotificationTemplateNameKDDI__c</fullName>
        <label>パスワードリセット通知メールテンプレート(社内)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResetNotificationTemplateName__c</fullName>
        <label>パスワードリセット通知メールテンプレート</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SANXSettingsScreen__c</fullName>
        <label>SANXSettingsScreen</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SeasonalMessage__c</fullName>
        <label>旬なメッセージ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SeasonalThema__c</fullName>
        <label>SeasonalThema</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLDailyReportManual__c</fullName>
        <label>URLDailyReportManual</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URLExternalAuChannelManual__c</fullName>
        <label>URLExternalAuChannelManual</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URLExternalCxSTPDManual__c</fullName>
        <label>URLExternalCxSTPDManual</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URLHearingSettingsScreen__c</fullName>
        <label>URLHearingSettingsScreen</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URLInternalAuChannelManual__c</fullName>
        <label>URLInternalAuChannelManual</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URLInternalCxSTPDManual__c</fullName>
        <label>URLInternalCxSTPDManual</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URLReportsSFA__c</fullName>
        <label>URLReportsSFA</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URLSingleSignOn__c</fullName>
        <label>URLSingleSignOn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URLToDoSettingsScreen__c</fullName>
        <label>URLToDoSettingsScreen</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URLauChannelSettingsScreen__c</fullName>
        <label>URLauChannelSettingsScreen</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UserIDExcludedFromRanking__c</fullName>
        <label>UserIDExcludedFromRanking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserIDOwnerCX__c</fullName>
        <label>UserIDOwnerCX</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dataLimitActivities__c</fullName>
        <label>dataLimitActivities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dataLimitCXKnowledge__c</fullName>
        <label>dataLimitCXKnowledge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dataLimitEventSTPD__c</fullName>
        <description>Limit of latest STPD shown in Event screen</description>
        <label>dataLimitEventSTPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dataLimitEvent__c</fullName>
        <label>dataLimitEvent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dataLimitForSharing__c</fullName>
        <label>dataLimitForSharing</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dataLimitSTPD__c</fullName>
        <label>dataLimitSTPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dataSharingVersion__c</fullName>
        <label>dataSharingVersion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>headerColor__c</fullName>
        <label>headerColor</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>saDailyReportCSVExportDateFrom__c</fullName>
        <label>saDailyReportCSVExportDateFrom</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>saDailyReportCSVExportDateTo__c</fullName>
        <label>saDailyReportCSVExportDateTo</label>
        <type>Date</type>
    </fields>
    <label>auCommunityCustomSettings</label>
</CustomObject>